--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "cypress open",
+    "cy:run":"cypress run"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^9.1.0"
+  },
+  "dependencies": {
+    "prettier": "^2.5.0"
   }
 }
