--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress": "^9.1.1"
   },
   "dependencies": {
+    "cypress-xpath": "^1.6.2",
     "mochawesome": "^7.0.1",
     "prettier": "^2.5.0"
   }
